Well the book was obviously wrong.
