# domain/src/main/java/fr/bankwiz/server/domain/model/input/BankAccountCreationInput.java
@@ -2,6 +2,7 @@ package fr.bankwiz.server.domain.model.input;
 
 import java.util.UUID;
 
+import fr.bankwiz.server.domain.model.data.BankAccount.CurrencyEnumDomain;
 import lombok.Builder;
 import lombok.Getter;
 
@@ -11,5 +12,5 @@ public class BankAccountCreationInput {
     private String bankAccountName;
     private UUID groupId;
     private Integer decimalBaseAmount;
-    private String currency;
+    private CurrencyEnumDomain currency;
 }
