# domain/src/main/java/fr/bankwiz/server/domain/service/BankAccountService.java
@@ -43,8 +43,6 @@ public class BankAccountService implements BankAccountApi {
     @Override
     public BankAccount createBankAccount(BankAccountCreationInput bankAccountCreationInput) {
 
-        final BankAccount.CurrencyEnumDomain currencyEnumDomain = BankAccount.CurrencyEnumDomain.valueOf(bankAccountCreationInput.getCurrency());
-
         final Group group = this.groupSpi
                 .findById(bankAccountCreationInput.getGroupId())
                 .orElseThrow(() -> new GroupNotExistException(bankAccountCreationInput.getGroupId()));
@@ -56,7 +54,7 @@ public class BankAccountService implements BankAccountApi {
                 .decimalBaseAmount(bankAccountCreationInput.getDecimalBaseAmount())
                 .group(group)
                 .id(UUID.randomUUID())
-                .currency(currencyEnumDomain)
+                .currency(bankAccountCreationInput.getCurrency())
                 .build();
 
         return this.bankAccountSpi.save(bankAccount);
